# PlaneWar

./: BulletsControl.c  BulletsControl.h  CMakeLists.txt  CheckCollision.c  CheckCollision.h  Config.h  Data.c  Data.h  EnemyControl.c  EnemyControl.h  Plane.c  Plane.h  PlayerControl.c  PlayerControl.h  Props.c  Props.h  Readme.md  Resource.c  Resource.h  main.c
image/: StartBackGround.psd
